@@ -39,6 +39,12 @@
 #  define OCR OCR1A
 #  define PWM10 WGM10
 #  define PWM11 WGM11
+#elif defined(__AVR_ATmega32__)
+#  define OC1 PD5
+#  define DDROC DDRD
+#  define OCR OCR1A
+#  define PWM10 WGM10
+#  define PWM11 WGM11
 #elif defined(__AVR_ATmega64__) || defined(__AVR_ATmega128__)
 #  define OC1 PB5
 #  define DDROC DDRB
