@@ -1,5 +1,9 @@
 2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	* doc/examples/demo.c: Update for ATmega32
+
+2004-07-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* libc/stdio/fputs_p.c: replace PRG_RDB by pgm_read_byte
 	* libc/stdio/puts_p.c: Ditto.
 	* libc/stdio/vfprintf.c: Ditto.
